--- a/LearningDynamicsModel.ipynb
+++ b/LearningDynamicsModel.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d5772c5f",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
    ],
    "source": [
     "### DATA LOADING\n",
-    "\n",
+    "### Change gl.data_dir to your data directory in setglobals.py before running\n",
     "data = pd.read_csv(gl.data_dir + 'SL3_Forces.csv', sep = '\\t')\n",
     "data['forceVector'] = data[[col for col in data.columns if col.startswith('PC_')]].apply(lambda x: np.array(x), axis=1)\n",
     "data = data.drop(columns=[col for col in data.columns if col.startswith('PC_')])\n",
