--- a/LearningDynamicsModel.ipynb
+++ b/LearningDynamicsModel.ipynb
@@ -25,6 +25,9 @@
     "- `isError`: Boolean flag for trial errors.\n",
     "- `PC_{i}`: PCA reduced components of normalized force traces (15 components)\n",
     "- `seq` & `hand`: Sequence and hand identifiers.\n",
+    "\n",
+    "## Data Loading\n",
+    "Change data_dir to your data directory in setglobals.py before running\n",
     "\n"
    ]
   },
