--- a/LearningDynamicsModel.ipynb
+++ b/LearningDynamicsModel.ipynb
@@ -255,7 +255,7 @@
    "id": "bb0f7bca",
    "metadata": {},
    "source": [
-    "# ET and Force residuals correlation"
+    "# Detrending + Speed and Force residuals correlation"
    ]
   },
   {
